<resources>
    <string name="app_name">拍照笔记</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="new_dir">新建文件夹</string>
    <string name="new_notebook">新建笔记本</string>
    <string name="text">我的文本</string>
    <string name="ppt">我的幻灯片</string>
    <string name="card">名片与证件</string>
    <string name="mark_content">标记内容</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="text_text">
        测试文本测试文本测试文本测试文本测试文本测试文本测试文本测试文本测试文本
        测试文本测试文本测试文本测试文本测试文本测试文本测试文本测试文本测试文本
    </string>
    <string name="mark_hint">点击编辑按钮，输入笔记</string>
    <string name="onSaving">保存中...</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
