<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/icon_group">
        <item
            android:id="@+id/text_menu"
            android:icon="@drawable/ic_menu_text"
            android:title="@string/text"/>
        <item
            android:id="@+id/ppt_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ppt"/>
        <item
            android:id="@+id/card_menu"
            android:icon="@drawable/ic_menu_card"
            android:title="@string/card"/>
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="登出"/>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings"
                android:title="设置"/>
        </menu>
    </item>

</menu>
