<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucentGray"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mark_title"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/mark_content"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/edit_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/translucentGray"
                android:text="@string/edit"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorAccent" />
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:minLines="5"
            android:maxLines="8"
            android:enabled="false"
            android:hint="@string/mark_hint"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:layout_margin="5dp"/>
    </LinearLayout>

</RelativeLayout>